--- a/src/app/transfer-builder/transfers/transfers.component.scss
+++ b/src/app/transfer-builder/transfers/transfers.component.scss
@@ -1,6 +1,148 @@
 @import "../../../styles";
 
 .wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
   color: $dark-light-color;
+}
+
+.top-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 25px;
+  font-weight: bold;
+  box-sizing: border-box;
+  padding: 20px 30px 10px 30px;
+}
+
+.title {
+  font-size: 30px;
+}
+
+.bottom-container {
+  height: 100%;
+  width: 100%;
+  background: $dark-table-color;
+  border-radius: 0 0 30px 30px;
+}
+
+.controls-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding: 20px;
+}
+
+.add-button {
+  border: 2px solid $dark-light-color;
+  color: $dark-light-color;
+  background: none;
+  font-size: 18px;
+  padding: 10px 20px 10px 20px;
+}
+
+.table-container {
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 16px;
+}
+
+tr {
+  width: 100%;
+  height: 40px;
+}
+
+th, td {
+  border: 2px solid $dark-light-color;
+  margin: 0;
+  padding: 5px;
+}
+
+th {
   font-size: 20px;
+}
+
+td {
+  font-size: 18px;
+}
+
+.icon {
+  height: 20px;
+  cursor: pointer;
+}
+
+.icon-arrow {
+  height: 25px;
+}
+
+.icon-eye {
+  height: 30px;
+}
+
+.icon-eye:hover {
+  content: url("../../../assets/eye_filled.png");
+}
+
+.icon-edit:hover {
+  content: url("../../../assets/edit_filled.png");
+}
+
+.icon-garbage:hover {
+  content: url("../../../assets/garbage_filled.png");
+}
+
+.icon, .icon-arrow {
+  filter: $dark-light-pictures;
+}
+
+.type-column {
+  width: 45px;
+}
+
+.type-column-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-column {
+  width: 30%
+}
+
+.tag-column {
+
+}
+
+.count-column {
+  width: 150px;
+  text-align: right;
+}
+
+.count-container {
+  padding-right: 5%;
+}
+
+.date-column {
+  width: 180px;
+}
+
+.controls-column {
+  width: 110px;
+}
+
+.button-control-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
