--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,16 @@
-@font-face {
-  font-family: "K2D";
-  src: url("assets/K2D-Thin.ttf") format("ttf");
-}
+@import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
-body, html{
+$font: "K2D", sans-serif;
+
+body, html {
   padding: 0;
   margin: 0;
-  font-family: "K2D", sans-serif;
+  font-family: $font;
 }
 
 $dark-light-color: antiquewhite;
 $dark-light-pictures: invert(88%) sepia(9%) saturate(382%) hue-rotate(355deg) brightness(102%) contrast(102%);
 $dark-dark-color: black;
 $dark-navbar-color: #464646;
+$dark-table-color: #5C5C5C;
 $dark-main-color: #2F2F2F;
