#25 - Add ability to delete transfer.

--- a/src/app/transfer-builder/transfers/transfers.component.html
+++ b/src/app/transfer-builder/transfers/transfers.component.html
@@ -32,7 +32,7 @@
             <div class="button-control-container">
               <img class="icon icon-eye" src="assets/eye.png" alt="">
               <img class="icon icon-edit" src="assets/edit.png" alt="">
-              <img class="icon icon-garbage" src="assets/garbage.png" alt="">
+              <img class="icon icon-garbage" src="assets/garbage.png" alt="" (click)="openDialog(transfer.id)">
             </div>
           </td>
         </tr>
