#12 - Create new page: add transfer

--- a/src/app/transfer-builder/transfers/transfers.component.html
+++ b/src/app/transfer-builder/transfers/transfers.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="bottom-container">
     <div class="controls-container">
-      <button class="add-button">Add transfer</button>
+      <button class="add-button" routerLink="/my-wallet/create">Add transfer</button>
     </div>
     <div class="table-container">
       <table>
