--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,8 @@ $dark-dark-color: black;
 $dark-navbar-color: #464646;
 $dark-table-color: #5C5C5C;
 $dark-main-color: #2F2F2F;
+$dark-input-color: #C4C4C4;
+$dark-input-opacity-40-color: #C4C4C440;
 
 mat-dialog-container {
   font-family: Roboto, "Helvetica Neue", sans-serif;
