--- a/src/app/transfer-builder/transfers/transfers.component.scss
+++ b/src/app/transfer-builder/transfers/transfers.component.scss
@@ -43,6 +43,12 @@
   background: none;
   font-size: 18px;
   padding: 10px 20px 10px 20px;
+  cursor: pointer;
+}
+
+.add-button:hover {
+  background: $dark-light-color;
+  color: $dark-dark-color;
 }
 
 .table-container {
