#12 'Add new transfer' page

--- a/src/app/portal-layout/portal/portal.component.html
+++ b/src/app/portal-layout/portal/portal.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper-portal">
-  <app-navbar></app-navbar>
+  <app-navbar class="navbar"></app-navbar>
   <div class="main-panel">
     <div class="wrapper">
       <router-outlet></router-outlet>
     </div>
   </div>
-  <app-footer></app-footer>
+  <app-footer class="footer"></app-footer>
 </div>
