--- a/src/app/portal-layout/navbar/navbar.component.scss
+++ b/src/app/portal-layout/navbar/navbar.component.scss
@@ -1,9 +1,9 @@
 @import "../../../styles";
 
 .wrapper {
+  height: 100%;
   margin: 0;
   padding: 0;
-  height: 70px;
   background: $dark-navbar-color;
   display: flex;
   flex-direction: row;
