--- a/src/app/portal-layout/portal/portal.component.scss
+++ b/src/app/portal-layout/portal/portal.component.scss
@@ -4,21 +4,34 @@
   margin: 0;
   padding: 0;
   position: absolute;
-  height: 100%;
   width: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .main-panel {
+  min-height: 835px;
   background: $dark-main-color;
-  height: 100%;
 }
 
 .wrapper {
   background: $dark-navbar-color;
-  height: calc(100% - 35px);
   width: calc(100% - 60px);
   margin: 30px;
   border-radius: 30px;
+  min-width: 600px;
+}
+
+.navbar {
+  height: 70px;
+}
+
+.footer {
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
